Fix đường dẫn và bảo mật cho Backend+Backend+Chức năng Order/Thanh toán cơ bản
